feat: animals routes and tags added
